fix weblint error

--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="./images/Twitter logo.png"class="pix" alt="twitter">
+                        <img src="./images/Twitter-logo.png"class="pix" alt="twitter">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="./images/Linkedin logo.png"class="pix" alt="linkedin">
+                        <img src="./images/Twitter-logo.png"class="pix" alt="linkedin">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                       <img src="./images/M logo.png"class="pix" alt="letter m">
+                       <img src="./images/M-logo.png"class="pix" alt="letter m">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                       <img src="./images/Github logo.png"class="pix" alt="github">
+                       <img src="./images/Github-logo.png"class="pix" alt="github">
                     </a>
                </li>
                <li>
                    <a href="#">
-                       <img src="./images/fingers logo.png"class="pix" alt="finger icon">
+                       <img src="./images/fingers-logo.png"class="pix" alt="finger icon">
                    </a>
                 </li>
             </ul>
