--- a/index.html
+++ b/index.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel="stylesheet">
-</head>
-<body>
-    <main>
-        <header>
-            <a href="#">My logo</a>
-            <div>
-             <i class="fas fa-bars"></i>
-            </div>
-        </header>
-        <section>
-            <h1 class="profile">I'm Dare Glad to see you!</h1> 
-            <p class="dev">
-             I’m a software developer! I can help you build a product , feature or 
-             website Look through some of my work and experience! If you like what 
-             you see and have a project you need coded, don’t hestiate to contact 
-             me.
-            </p>
-            <div><a href="#" class="connect" >LET'S CONNECT</a></div>
-            <ul>
-                <li>
-                    <a href="#">
-                        <img src="./images/Twitter-logo.png" class="pix" alt="twitter">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/Twitter-logo.png" class="pix" alt="linkedin">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                       <img src="./images/M-logo.png" class="pix" alt="letter m">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                       <img src="./images/Github-logo.png" class="pix" alt="github">
-                    </a>
-               </li>
-               <li>
-                   <a href="#">
-                       <img src="./images/fingers-logo.png" class="pix" alt="finger icon">
-                   </a>
-                </li>
-            </ul>
-        </section>
-    </main>
-    
-</body>
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Portfolio</title>
+      <link rel="stylesheet" href="style.css">
+      <link rel="preconnect" href="https://fonts.gstatic.com" />
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,700;1,200&display=swap"rel="stylesheet"/>
+     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+    </head>
+  <body>
+      <main>
+            <header>
+             <a href="#">My Logo</a>
+                <nav>
+                 <i class="fas fa-bars"></i>
+                </nav>
+            </header>
+            <section>
+               <h1 class="profile">I'm Damilare Glad to see you!</h1> 
+               <p class="dev">
+                I’m a software developer! I can help you build a product , feature or 
+               website Look through some of my work and experience! If you like what 
+               you see and have a project you need coded, don’t hestiate to contact 
+               me.
+               </p>
+             <div><a href="#" class="connect" >LET'S CONNECT</a></div>
+                <ul>
+                    <li>
+                        <a href="#">
+                         <img src="./images/Twitter-logo.png" class="pix" alt="twitter">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                          <img src="./images/Linkedin-logo.png" class="pix" alt="linkedin">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                         <img src="./images/M-logo.png" class="pix" alt="letter m">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                         <img src="./images/Github-logo.png" class="pix" alt="github">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                         <img src="./images/fingers-logo.png" class="pix" alt="finger icon">
+                        </a>
+                    </li>
+                </ul>
+            </section>
+        </main>
+    </body>
 </html>
