create work section & about my self

--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@
                 </ul>
             </section>
         </main>
+        <section class="work-section">
+            
+        </section>
     </body>
 </html>
