--- a/index.html
+++ b/index.html
@@ -32,34 +32,168 @@
                 <ul>
                     <li>
                         <a href="#">
-                         <img src="./images/Twitter-logo.png" class="pix" alt="twitter">
+                         <img src="./images/Twitter-logo.png"  alt="twitter">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                          <img src="./images/Linkedin-logo.png" class="pix" alt="linkedin">
+                          <img src="./images/Linkedin-logo.png" alt="linkedin">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                         <img src="./images/M-logo.png" class="pix" alt="letter m">
+                         <img src="./images/M-logo.png" alt="letter m">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                         <img src="./images/Github-logo.png" class="pix" alt="github">
+                         <img src="./images/Github-logo.png" alt="github">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                         <img src="./images/fingers-logo.png" class="pix" alt="finger icon">
+                         <img src="./images/fingers-logo.png" alt="finger icon">
                         </a>
                     </li>
                 </ul>
             </section>
         </main>
         <section class="work-section">
-            
+           <ul class="project">
+                <li class="project-card">
+                  <img src="./images/Snapshoot-Portfolio.png" class="pix" alt="snap">
+                  <h1 class="project-title">TONIC</h1>
+                  <p class="project-description">CANOPY
+                      <span><img src="./images/rename.png" alt="period">Back End Dev </span>
+                      <span><img src="./images/rename.png" alt="period">2015</span>
+                  </p>
+                   <p class="project-content">
+                      A daily selection of privately personalized reads; no accounts or sign-ups required.
+                   </p>
+                   <div class="lang">
+                       <div class="btn">html</div>
+                       <div class="btn">css</div>
+                       <div class="btn">javascript</div>
+                   </div>
+                   <button type="button" class="bon">See Project</button>
+                </li>
+                <li class="project-card">
+                    <img src="./images/project-1.png" class="pix" alt="snap">
+                    <h1 class="project-title">Multi-Post Stories</h1>
+                    <p class="project-description">CANOPY
+                        <span><img src="./images/rename.png" alt="period">Back End Dev </span>
+                        <span><img src="./images/rename.png" alt="period">2015</span>
+                    </p>
+                    <p class="project-content">
+                        A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="lang">
+                        <div class="btn">html</div>
+                        <div class="btn">css</div>
+                        <div class="btn">javascript</div>
+                    </div>
+                    <button type="button" class="bon">See Project</button>
+                </li>
+                <li class="project-card">
+                    <img src="./images/project-2.png" class="pix" alt="snap">
+                    <h1 class="project-title">TONIC</h1>
+                    <p class="project-description">CANOPY
+                        <span><img src="./images/rename.png" alt="period">Back End Dev </span>
+                        <span><img src="./images/rename.png" alt="period">2015</span>
+                    </p>
+                    <p class="project-content">
+                        A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="lang">
+                        <div class="btn">html</div>
+                        <div class="btn">css</div>
+                        <div class="btn">javascript</div>
+                    </div>
+                    <button type="button" class="bon">See Project</button>
+                </li>
+                <li class="project-card">
+                    <img src="./images/project-3.png" class="pix" alt="snap">
+                    <h1 class="project-title">Multi-Post Stories</h1>
+                    <p class="project-description">CANOPY
+                        <span><img src="./images/rename.png" alt="period">Back End Dev </span>
+                        <span><img src="./images/rename.png" alt="period">2015</span>
+                    </p>
+                    <p class="project-content">
+                        A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="lang">
+                        <div class="btn">html</div>
+                        <div class="btn">css</div>
+                        <div class="btn">javascript</div>
+                    </div>
+                    <button type="button" class="bon">See Project</button>
+                </li>        
+           </ul> 
+        </section>
+        <section class="myself">
+            <div class="about">
+                <h1 class="about-myself">About Myself</h1>
+                <p class="myself-content">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+                <p><a href="#" class="connect">LET'S CONNECT</a></p>
+                <ul>
+                    <li>
+                        <a href="#">
+                           <img src="./images/./Twitter-logo.png" alt="Twitter-logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                          <img src="./images/Linkedin-logo.png" alt="Linkedin-logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                         <img src="./images/M-logo.png" alt="letter">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                          <img src="./images/Github-logo.png" alt="Github-logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                          <img src="./images/fingers-logo.png" alt="fingers-logo">
+                        </a>
+                    </li>
+                </ul>
+                <button type="button" class="resume">Get my resume</button>
+            </div>
+            <div class="container">
+                <div>
+                    <div class="lang-skill">
+                        <p class="eng">Languages</p>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="dropdown">
+                        <div class="dropdown-menu">
+                            <img src="./images/js-logo.png" alt="javascript-logo">
+                            <p class="java">Javascript</p>
+                        </div>
+                        <div class="dropdown-menu">
+                            <img src="./images/html-logo.png" alt="html-logo">
+                            <p class="java">HTML</p>
+                        </div>
+                        <div class="dropdown-menu">
+                            <img src="./images/css-logo.png" alt="css-logo">
+                            <p class="java">CSS</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="frame">
+                    <p class="fame">Frameworks</p>
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+                <div class="frame">
+                    <p class="fame">Skills</p>
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+            </ul>
         </section>
     </body>
 </html>
