fix linters error

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <p class="fame">Skills</p>
                     <i class="fas fa-chevron-right"></i>
                 </div>
-            </ul>
+            </div>
         </section>
     </body>
 </html>
