change div to ul in work section

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                    <p class="project-content">
                       A daily selection of privately personalized reads; no accounts or sign-ups required.
                    </p>
-                   <div class="lang">
-                       <div class="btn">html</div>
-                       <div class="btn">css</div>
-                       <div class="btn">javascript</div>
-                   </div>
+                   <ul class="lang">
+                       <li class="btn">html</li>
+                       <li class="btn">css</li>
+                       <li class="btn">javascript</li>
+                   </ul>
                    <button type="button" class="bon">See Project</button>
                 </li>
                 <li class="project-card">
@@ -87,11 +87,11 @@
                     <p class="project-content">
                         A daily selection of privately personalized reads; no accounts or sign-ups required.
                     </p>
-                    <div class="lang">
-                        <div class="btn">html</div>
-                        <div class="btn">css</div>
-                        <div class="btn">javascript</div>
-                    </div>
+                    <ul class="lang">
+                        <li class="btn">html</li>
+                        <li class="btn">css</li>
+                        <li class="btn">javascript</li>
+                    </ul>
                     <button type="button" class="bon">See Project</button>
                 </li>
                 <li class="project-card">
@@ -104,11 +104,11 @@
                     <p class="project-content">
                         A daily selection of privately personalized reads; no accounts or sign-ups required.
                     </p>
-                    <div class="lang">
-                        <div class="btn">html</div>
-                        <div class="btn">css</div>
-                        <div class="btn">javascript</div>
-                    </div>
+                    <ul class="lang">
+                        <li class="btn">html</li>
+                        <li class="btn">css</li>
+                        <li class="btn">javascript</li>
+                    </ul>
                     <button type="button" class="bon">See Project</button>
                 </li>
                 <li class="project-card">
@@ -121,11 +121,11 @@
                     <p class="project-content">
                         A daily selection of privately personalized reads; no accounts or sign-ups required.
                     </p>
-                    <div class="lang">
-                        <div class="btn">html</div>
-                        <div class="btn">css</div>
-                        <div class="btn">javascript</div>
-                    </div>
+                    <ul class="lang">
+                        <li class="btn">html</li>
+                        <li class="btn">css</li>
+                        <li class="btn">javascript</li>
+                    </ul>
                     <button type="button" class="bon">See Project</button>
                 </li>        
            </ul> 
@@ -134,7 +134,7 @@
             <div class="about">
                 <h1 class="about-myself">About Myself</h1>
                 <p class="myself-content">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-                <p><a href="#" class="connect">LET'S CONNECT</a></p>
+                <hx><a href="#" class="connect">LET'S CONNECT</a></hx>
                 <ul>
                     <li>
                         <a href="#">
@@ -164,36 +164,36 @@
                 </ul>
                 <button type="button" class="resume">Get my resume</button>
             </div>
-            <div class="container">
-                <div>
+            <ul class="container">
+                <li>
                     <div class="lang-skill">
                         <p class="eng">Languages</p>
                         <i class="fas fa-chevron-down"></i>
                     </div>
-                    <div class="dropdown">
-                        <div class="dropdown-menu">
+                    <ul class="dropdown">
+                        <li class="dropdown-menu">
                             <img src="./images/js-logo.png" alt="javascript-logo">
                             <p class="java">Javascript</p>
-                        </div>
-                        <div class="dropdown-menu">
+                        </li>
+                        <li class="dropdown-menu">
                             <img src="./images/html-logo.png" alt="html-logo">
                             <p class="java">HTML</p>
-                        </div>
-                        <div class="dropdown-menu">
+                        </li>
+                        <li class="dropdown-menu">
                             <img src="./images/css-logo.png" alt="css-logo">
                             <p class="java">CSS</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="frame">
+                        </li>
+                    </ul>
+                </li>
+                <li class="frame">
                     <p class="fame">Frameworks</p>
                     <i class="fas fa-chevron-right"></i>
-                </div>
-                <div class="frame">
+                </li>
+                <li class="frame">
                     <p class="fame">Skills</p>
                     <i class="fas fa-chevron-right"></i>
-                </div>
-            </div>
+                </li>
+            </ul>
         </section>
     </body>
 </html>
