--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
            </ul> 
         </section>
         <section class="myself">
-            <section class="about">
+            <div class="about">
                 <h1 class="about-myself">About Myself</h1>
                 <p class="myself-content">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-                <hx><a href="#" class="connect">LET'S CONNECT</a></hx>
+                <p><a href="#" class="connect">LET'S CONNECT</a></p>
                 <ul>
                     <li>
                         <a href="#">
@@ -163,7 +163,7 @@
                     </li>
                 </ul>
                 <button type="button" class="resume">Get my resume</button>
-            </section>
+            </div>
             <ul class="container">
                 <li>
                     <div class="lang-skill">
