--- a/index.html
+++ b/index.html
@@ -195,5 +195,15 @@
                 </li>
             </ul>
         </section>
+        <footer>
+          <h1>Contact me</h1>
+          <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
+          <form>
+            <input type="text" id="user-name" name="name" maxlength="30" placeholder="Name" required>
+            <input type="email" id="user-email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="user@mail.com" required>
+            <textarea maxlength="500" placeholder="Write your message here" required></textarea>
+            <button type="submit">Get in Touch</button>
+          </form>
+        </footer>
     </body>
 </html>
