Style contact form

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </a>
                     </li>
                 </ul>
-                <button type="button" class="resume">Get my resume</button>
+                <button type="button" class="bon">Get my resume</button>
             </div>
             <ul class="container">
                 <li>
@@ -201,8 +201,8 @@
           <form>
             <input type="text" id="user-name" name="name" maxlength="30" placeholder="Name" required>
             <input type="email" id="user-email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="user@mail.com" required>
-            <textarea maxlength="500" placeholder="Write your message here" required></textarea>
-            <button type="submit">Get in Touch</button>
+            <textarea maxlength="500" placeholder="Write your message here" rows="5" required></textarea>
+            <button type="submit" class="bon">Get in Touch</button>
           </form>
         </footer>
     </body>
