--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <header>
              <a href="#">My Logo</a>
                 <nav>
-                 <i class="fas fa-bars"></i>
+                 <i class="bar fas fa-bars"></i>
                 </nav>
             </header>
             <section>
@@ -75,7 +75,10 @@
                        <li class="btn">css</li>
                        <li class="btn">javascript</li>
                    </ul>
-                   <button type="button" class="bon">See Project</button>
+                   <div>
+                    <button type="button" class="bon">See Project</button>
+                   </div>
+                   
                 </li>
                 <li class="project-card">
                     <img src="./images/project-1.png" class="pix" alt="snap">
@@ -92,7 +95,9 @@
                         <li class="btn">css</li>
                         <li class="btn">javascript</li>
                     </ul>
-                    <button type="button" class="bon">See Project</button>
+                    <div>
+                        <button type="button" class="bon">See Project</button>
+                    </div>
                 </li>
                 <li class="project-card">
                     <img src="./images/project-2.png" class="pix" alt="snap">
@@ -109,7 +114,9 @@
                         <li class="btn">css</li>
                         <li class="btn">javascript</li>
                     </ul>
-                    <button type="button" class="bon">See Project</button>
+                    <div>
+                        <button type="button" class="bon">See Project</button>
+                    </div>
                 </li>
                 <li class="project-card">
                     <img src="./images/project-3.png" class="pix" alt="snap">
@@ -126,7 +133,9 @@
                         <li class="btn">css</li>
                         <li class="btn">javascript</li>
                     </ul>
-                    <button type="button" class="bon">See Project</button>
+                    <div>
+                        <button type="button" class="bon">See Project</button>
+                    </div>
                 </li>        
            </ul> 
         </section>
