Add descriptive alt attribute

--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
         <ul>
           <li>
             <a href="#">
-              <img src="./images/Twitter-logo.png"  alt="twitter">
+              <img src="./images/Twitter-logo.png"  alt="twitter logo">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/Linkedin-logo.png" alt="linkedin">
+              <img src="./images/Linkedin-logo.png" alt="linkedin logo">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/M-logo.png" alt="letter m">
+              <img src="./images/M-logo.png" alt="medium-logo">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/Github-logo.png" alt="github">
+              <img src="./images/Github-logo.png" alt="github-logo">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/fingers-logo.png" alt="finger icon">
+              <img src="./images/fingers-logo.png" alt="angellist-logo">
             </a>
           </li>
         </ul>
@@ -79,14 +79,14 @@
       <ul class="project">
         <li class="project-card">
           <div class="card-img">
-            <img src="./images/Snapshoot-Portfolio.png" class="pix" alt="snap">
-            <img src="./images/first-snapshot-desktop.png" alt="desktop" class="snap">
+            <img src="./images/Snapshoot-Portfolio.png" class="pix" alt="a picture of my first project">
+            <img src="./images/first-snapshot-desktop.png" alt="a picture of my second project" class="snap">
           </div>
           <div class="card-content">
             <h1 class="project-title">Tonic</h1>
             <p class="project-description">CANOPY
-              <span><img src="./images/rename.png" alt="period">Back End Dev </span>
-              <span><img src="./images/rename.png" alt="period">2015</span>
+              <span><img src="./images/rename.png" alt="a dot representing technology">Back End Dev </span>
+              <span><img src="./images/rename.png" alt="a dot representing the year">2015</span>
             </p>
             <p class="project-content">
               A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -103,14 +103,14 @@
         </li>
         <li class="project-card">
           <div class="card-img flex-order">
-            <img src="./images/project-1.png" class="pix" alt="snap">
-            <img src="./images/second-snapshot-desktop.png" alt="desktop" class="snap">
+            <img src="./images/project-1.png" class="pix" alt="a picture of my  third project">
+            <img src="./images/second-snapshot-desktop.png" alt="a picture of my fourth project" class="snap">
           </div>
           <div class="card-content">
             <h1 class="project-title">Multi-Post Stories</h1>
             <p class="project-description">CANOPY
-              <span><img src="./images/rename.png" alt="period">Back End Dev </span>
-              <span><img src="./images/rename.png" alt="period">2015</span>
+              <span><img src="./images/rename.png" alt="a dot representing technology">Back End Dev </span>
+              <span><img src="./images/rename.png" alt="a dot representing the year">2015</span>
             </p>
             <p class="project-content">
               A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -128,14 +128,14 @@
         </li>
         <li class="project-card">
           <div class="card-img">
-            <img src="./images/project-2.png" class="pix" alt="snap">
-            <img src="./images/third-snapshot-desktop.png" alt="desktop" class="snap">
+            <img src="./images/project-2.png" class="pix" alt="a picture of my fifth project">
+            <img src="./images/third-snapshot-desktop.png" alt="a picture of my  sixth project" class="snap">
           </div>
           <div class="card-content">
             <h1 class="project-title">Tonic</h1>
             <p class="project-description">CANOPY
-              <span><img src="./images/rename.png" alt="period">Back End Dev </span>
-              <span><img src="./images/rename.png" alt="period">2015</span>
+              <span><img src="./images/rename.png" alt="a dot representing technology">Back End Dev </span>
+              <span><img src="./images/rename.png" alt="a dot representing the yearr">2015</span>
             </p>
             <p class="project-content">
               A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -153,14 +153,14 @@
         </li>
         <li class="project-card">
           <div class="card-img flex-order">
-            <img src="./images/project-3.png" class="pix" alt="snap">
-            <img src="./images/fourth-snapshot-desktop.png" alt="desktop" class="snap">
+            <img src="./images/project-3.png" class="pix" alt="a picture of my seventh project">
+            <img src="./images/fourth-snapshot-desktop.png" alt="a picture of my eigth project" class="snap">
           </div>
           <div class="card-content">
             <h1 class="project-title">Multi-Post Stories</h1>
             <p class="project-description">CANOPY
-              <span><img src="./images/rename.png" alt="period">Back End Dev </span>
-              <span><img src="./images/rename.png" alt="period">2015</span>
+              <span><img src="./images/rename.png" alt="a dot representing technology">Back End Dev </span>
+              <span><img src="./images/rename.png" alt="a dot representing the year">2015</span>
             </p>
             <p class="project-content">
               A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -197,7 +197,7 @@
             </li>
             <li>
               <a href="#">
-                <img src="./images/M-logo.png" alt="letter">
+                <img src="./images/M-logo.png" alt="medium-logo">
               </a>
             </li>
             <li>
@@ -207,7 +207,7 @@
             </li>
             <li>
               <a href="#">
-                <img src="./images/fingers-logo.png" alt="fingers-logo">
+                <img src="./images/fingers-logo.png" alt="angellist-logo">
               </a>
             </li>
           </ul>
