Fix the hamburger menu

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <header>
     <a class="logo" href="#">My Logo</a>
     <nav>
-      <div>
-        <i class="bars fas fa-bars"></i>
-      </div>
+      <button class="hamburger" id="hamburger">
+        <i class="fas fa-bars"></i>
+      </button>
     </nav>
     <ul class="nav-list">
       <li class="nav-color">
