Add javascript linters

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
     <a class="logo" href="#">My Logo</a>
     <nav>
       <button class="hamburger" id="hamburger">
-        <i class="fas fa-bars"></i>
+        <i class="fas fa-bars" ></i>
       </button>
     </nav>
     <ul class="nav-list">
+      <li class="close-menu">
+        <i class="fas fa-times"></i>
+      </li>
       <li class="nav-color">
         <a href="#" class="nav-link">
           Portfoilo
@@ -49,7 +52,7 @@
       </li>
     </ul>
   </header>
-  <main>
+  <main id="main">
     <section class="top">
       <h1 class="profile">I'm Damilare Glad to see you!</h1>
       <p class="dev">
@@ -272,6 +275,7 @@
       <button type="submit" class="bon">Get in Touch</button>
     </form>
   </footer>
+  <script src="app.js"></script>
 </body>
 
 </html>
