Add Javascript files

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
         <i class="fas fa-times"></i>
       </li>
       <li class="nav-color">
-        <a href="#" class="nav-link">
+        <a href="#portfolio" class="nav-link">
           Portfoilo
         </a>
       </li>
       <li class="nav-color">
-        <a href="#" class="nav-link">
+        <a href="#about" class="nav-link">
           About
         </a>
       </li>
       <li class="nav-color">
-        <a href="#" class="nav-link">
+        <a href="#contact" class="nav-link">
           Contact
         </a>
       </li>
@@ -91,7 +91,7 @@
       </ul>
     </section>
   </main>
-  <section class="work-section">
+  <section class="work-section" id="portfolio">
     <ul class="project">
       <li class="project-card">
         <div class="card-img">
@@ -194,7 +194,7 @@
       </li>
     </ul>
   </section>
-  <section class="myself">
+  <section class="myself" id="about">
     <div class="about-content">
       <div class="about">
         <h2 class="about-myself">About<br>Myself</h2>
@@ -263,7 +263,7 @@
       </ul>
     </div>
   </section>
-  <footer>
+  <footer id="contact">
     <h2>Contact me</h2>
     <p>If you have an application you are interested in developing, a feature that you need built or a project that
       needs coding. I’d love to help with it </p>
