--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </li>
       <li class="nav-color">
         <a href="#portfolio" class="nav-link">
-          Portfoilo
+          Portfolio
         </a>
       </li>
       <li class="nav-color">
