--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
       <ul class="social-media">
         <li>
           <a href="#"
-            ><img src="images/icon-twitter.png" alt="Twitter profile"
+            ><img src="images/twitter-logo.png" alt="Twitter profile"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img src="images/icon-linkedin.png" alt="Linkedin profile"
+            ><img src="images/linkedin-logo.png" alt="Linkedin profile"
           /></a>
         </li>
         <li>
@@ -63,7 +63,7 @@
         </li>
         <li>
           <a href="#"
-            ><img src="images/icon-github.png" alt="GitHub profile"
+            ><img src="images/github-logo.png" alt="GitHub profile"
           /></a>
         </li>
         <li>
@@ -89,12 +89,12 @@
         <ul>
           <li>
             <a href="#"
-              ><img src="images/icon-twitter.png" alt="Twitter profile"
+              ><img src="images/twitter-logo.png" alt="Twitter profile"
             /></a>
           </li>
           <li>
             <a href="#"
-              ><img src="images/icon-linkedin.png" alt="Linkedin profile"
+              ><img src="images/linkedin-logo.png" alt="Linkedin profile"
             /></a>
           </li>
           <li>
@@ -102,7 +102,7 @@
           </li>
           <li>
             <a href="#"
-              ><img src="images/icon-github.png" alt="GitHub profile"
+              ><img src="images/github-logo.png" alt="GitHub profile"
             /></a>
           </li>
           <li>
