Add id for form

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         that you need built or a project that needs coding. I’d love to help
         with it
       </p>
-      <form action="https://formspree.io/f/mqkwbzqd" method="POST">
+      <form action="https://formspree.io/f/mqkwbzqd" method="POST" id="contact-form">
         <input
           type="text"
           name="user-name"
@@ -177,6 +177,7 @@
           maxlength="500"
         >
         </textarea>
+        <span id="error-message"></span>
         <button class="btn-project btn-contact" type="submit">
           Get it Touch
         </button>
