Fix tse changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </script>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,700;1,200&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
 </head>
@@ -78,7 +78,7 @@
   <section class="about-myself popupopacity" id="about">
     <div class="about-myself-container">
       <div class="about-myself-content">
-        <h2 class="section-title">About Myself</h2>
+        <h2 class="section-title">About <br> Myself</h2>
         <p>
           Hello I’m a software developer! I can help you build a product ,
           feature or website Look through some of my work and experience! If
